--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.37",
     "@angular/animations": "~10.0.14",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.14",
     "@angular/compiler": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
