--- a/meter-service/pom.xml
+++ b/meter-service/pom.xml
@@ -18,7 +18,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
+    <java.version>14</java.version>
     <docker.image.prefix>eu.gcr.io</docker.image.prefix>
     <opentracing-spring-jaeger-cloud-starter.version>3.1.2</opentracing-spring-jaeger-cloud-starter.version>
     <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
@@ -28,6 +28,7 @@
     <springdoc-openapi-webflux-core.version>1.4.1</springdoc-openapi-webflux-core.version>
     <org-modelmapper.version>2.3.5</org-modelmapper.version>
     <skipDocs>true</skipDocs>
+
   </properties>
 
   <dependencies>
@@ -158,6 +159,14 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>14</source>
+          <target>14</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
