adds pretrained freqs

--- a/anomaly-detection-model/Dockerfile
+++ b/anomaly-detection-model/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.6
 WORKDIR /app
 
 COPY requirements.txt /app
+COPY pretrained_freqs.pkl /app/pretrained_freqs.pkl
 RUN pip install -r ./requirements.txt
 
 COPY app.py /app
